--- a/src/main/resources/assets/hbm/lang/en_us.lang
+++ b/src/main/resources/assets/hbm/lang/en_us.lang
@@ -1151,6 +1151,7 @@ container.machineSILEX=SILEX
 container.machineFEL=FEL
 
 tile.heater_firebox.name=Firebox
+tile.furnace_steel.name=Steel Furnace
 container.heater_firebox=Firebox
 
 tile.barrel_plastic.name=Safe Barrel™
