--- a/src/main/resources/assets/hbm/lang/en_us.lang
+++ b/src/main/resources/assets/hbm/lang/en_us.lang
@@ -1971,15 +1971,15 @@ item.fusion_shield_desh.name=Desh Fusion Reactor Blanket
 item.fusion_shield_tungsten.name=Tungsten Fusion Reactor Blanket
 item.fusion_shield_vaporwave.name=Vaporwave Fusion Reactor Blanket
 
-item.dynosphere_base.name=Blank Dynosphere
-item.dynosphere_desh.name=Desh Dynosphere
-item.dynosphere_desh_charged.name=Desh Dynosphere (Charged)
-item.dynosphere_schrabidium.name=Schrabidium Dynosphere
-item.dynosphere_schrabidium_charged.name=Schrabidium Dynosphere (Charged)
-item.dynosphere_euphemium.name=Euphemium Dynosphere
-item.dynosphere_euphemium_charged.name=Euphemium Dynosphere (Charged)
-item.dynosphere_dineutronium.name=Dineutronium Dynosphere
-item.dynosphere_dineutronium_charged.name=Dineutronium Dynosphere (Charged)
+item.dynosphere_base.name=Blank Dynosphere (SOON-TO-BE DEPRECATED)
+item.dynosphere_desh.name=Desh Dynosphere(SOON-TO-BE DEPRECATED)
+item.dynosphere_desh_charged.name=Desh Dynosphere (Charged)(SOON-TO-BE DEPRECATED)
+item.dynosphere_schrabidium.name=Schrabidium Dynosphere(SOON-TO-BE DEPRECATED)
+item.dynosphere_schrabidium_charged.name=Schrabidium Dynosphere (Charged)(SOON-TO-BE DEPRECATED)
+item.dynosphere_euphemium.name=Euphemium Dynosphere(SOON-TO-BE DEPRECATED)
+item.dynosphere_euphemium_charged.name=Euphemium Dynosphere (Charged)(SOON-TO-BE DEPRECATED)
+item.dynosphere_dineutronium.name=Dineutronium Dynosphere(SOON-TO-BE DEPRECATED)
+item.dynosphere_dineutronium_charged.name=Dineutronium Dynosphere (Charged)(SOON-TO-BE DEPRECATED)
 
 item.plate_iron.name=Iron Plate
 item.plate_lead.name=Lead Plate
